test/spec_vectors/elem/ok/module_23.wat
(module (func) (table 1 funcref) (elem (i32.const 0) func 0))