test/spec_vectors/elem/fail/module_76.wat
(module (table 1 funcref) (elem (i32.const 0) funcref (item (i32.const 0))))